# colabora

./: .gitignore  README.md  app.py  colabora.wsgi  defaults.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: agregar-funcionalidad.md
colabora/: __init__.py  api.py  app.py  db.py  main.py  schema.sql  util.py  views.py
colabora/templates/: base.html  cambia.html  codigo.html  confirma.html  edita.html  entidad_legislatura.html  lista.html  lista_desasigna.html  lista_todas.html  login.html  nueva.html  recupera.html  registro.html  usuario.html
docs/source/: api.rst  conf.py  desarrollo.rst  diseno.rst  index.rst  referencia.rst  seguridad.rst  uso.rst
templates/: base.html  edita.html  iniciativas.html  lista.html  login.html
tests/: conftest.py  data.sql  test_api.py  test_app.py  test_db.py  test_util.py  test_views.py
